fix: type issue with password and profileById
