# swagger.yaml
@@ -1510,6 +1510,29 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/GetMiExpoMeResponseDto"
+  /mi-expo/login:
+    post:
+      operationId: "MiExpoController_loginUsernamePassword"
+      parameters: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/LoginMiExpoDto"
+      responses:
+        200:
+          description: "Sesión iniciada"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/LoginMiExpoResponseDto"
+        401:
+          description: "Credenciales inválidas"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorDto"
 info:
   title: "Expo Backend"
   description: "Backend de las aplicaciones de Expo"
@@ -6322,10 +6345,6 @@ components:
           type:
             - "string"
             - "null"
-        password:
-          type:
-            - "string"
-            - "null"
         phoneNumber:
           type:
             - "string"
@@ -6562,7 +6581,6 @@ components:
         - "shortId"
         - "firstTimeMiExpo"
         - "username"
-        - "password"
         - "phoneNumber"
         - "isPhoneVerified"
         - "secondaryPhoneNumber"
@@ -8015,3 +8033,160 @@ components:
         - "username"
         - "birth"
         - "residence"
+    LoginMiExpoDto:
+      type:
+        - "object"
+      properties:
+        username:
+          type:
+            - "string"
+        password:
+          type:
+            - "string"
+          minLength: 6
+      required:
+        - "username"
+        - "password"
+    LoginMiExpoResponseDto:
+      type:
+        - "object"
+      properties:
+        user:
+          type:
+            - "object"
+          properties:
+            id:
+              type:
+                - "string"
+              format: "uuid"
+            shortId:
+              type:
+                - "number"
+            firstTimeMiExpo:
+              type:
+                - "boolean"
+            username:
+              type:
+                - "string"
+                - "null"
+            phoneNumber:
+              type:
+                - "string"
+              minLength: 1
+            isPhoneVerified:
+              type:
+                - "boolean"
+            secondaryPhoneNumber:
+              type:
+                - "string"
+                - "null"
+            fullName:
+              type:
+                - "string"
+              minLength: 1
+            firstName:
+              type:
+                - "string"
+                - "null"
+              minLength: 1
+            gender:
+              type:
+                - "string"
+                - "null"
+            birthDate:
+              type:
+                - "string"
+                - "null"
+            profilePictureUrl:
+              type:
+                - "string"
+                - "null"
+              format: "uri"
+            instagram:
+              type:
+                - "string"
+                - "null"
+            mail:
+              type:
+                - "string"
+                - "null"
+              format: "email"
+            dni:
+              type:
+                - "string"
+                - "null"
+            alternativeNames:
+              type:
+                - "array"
+              items:
+                type:
+                  - "string"
+            birthLocationId:
+              type:
+                - "string"
+                - "null"
+              format: "uuid"
+            residenceLocationId:
+              type:
+                - "string"
+                - "null"
+              format: "uuid"
+            isInTrash:
+              type:
+                - "boolean"
+            movedToTrashDate:
+              type:
+                - "string"
+                - "null"
+              format: "date-time"
+            created_at:
+              type:
+                - "string"
+              format: "date-time"
+            updated_at:
+              type:
+                - "string"
+              format: "date-time"
+          required:
+            - "id"
+            - "shortId"
+            - "firstTimeMiExpo"
+            - "username"
+            - "phoneNumber"
+            - "isPhoneVerified"
+            - "secondaryPhoneNumber"
+            - "fullName"
+            - "firstName"
+            - "gender"
+            - "birthDate"
+            - "profilePictureUrl"
+            - "instagram"
+            - "mail"
+            - "dni"
+            - "alternativeNames"
+            - "birthLocationId"
+            - "residenceLocationId"
+            - "isInTrash"
+            - "movedToTrashDate"
+            - "created_at"
+            - "updated_at"
+        backendTokens:
+          type:
+            - "object"
+          properties:
+            accessToken:
+              type:
+                - "string"
+            refreshToken:
+              type:
+                - "string"
+            expiresIn:
+              type:
+                - "number"
+          required:
+            - "accessToken"
+            - "refreshToken"
+            - "expiresIn"
+      required:
+        - "user"
+        - "backendTokens"
